--- a/index.scss
+++ b/index.scss
@@ -90,11 +90,11 @@ body{
 }
 
 
-// @media (max-width: 575.98px) {
-//     .container .form-group .row .submit{
-//         margin-top: 15px;
-//     }    
-// }
+@media (max-width: 750px) {
+    #submit{
+        margin-top:15px;
+    }
+}
 //END TODO MINI APP
 
 //CALCULATOR START
